<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_interface</name>
  <version>0.0.0</version>
  <description>Baxter SDK interface classes (rosbridge/roslibpy based) for ROS 2</description>
  <maintainer email="theengineroom1@todo.todo">theengineroom1</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_maintenance_msgs</exec_depend>
  <exec_depend>python3-roslibpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
